--- a/cart.html
+++ b/cart.html
@@ -56,22 +56,94 @@ header h1 {
     color: #ffd700;
     margin-top: 20px;
 }
-button {
-    padding: 12px 18px;
-    border: none;
-    background: linear-gradient(90deg, #d4af37, #b8860b);
-    color: #000;
-    border-radius: 10px;
-    cursor: pointer;
+
+/* Checkout Form */
+.checkout-form {
+    max-width: 600px;
+    margin: 30px auto;
+    background: rgba(255,255,255,0.05);
+    padding: 25px;
+    border-radius: 12px;
+    border: 1px solid rgba(212,175,55,0.5);
+    box-shadow: 0 0 25px rgba(212,175,55,0.4);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.checkout-form:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0 35px rgba(212,175,55,0.6);
+}
+.checkout-form label {
+    display: block;
+    margin-bottom: 8px;
+    color: #ffd700;
     font-weight: bold;
-    transition: background 0.3s ease;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 18px;
 }
-button:hover {
-    background: linear-gradient(90deg, #ffd700, #d4af37);
+.checkout-form input, .checkout-form select {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 18px;
+    border-radius: 8px;
+    border: 1px solid #d4af37;
+    background: #111;
+    color: #ffd700;
+    font-size: 16px;
+    box-shadow: inset 0 0 8px rgba(212,175,55,0.3);
 }
+.checkout-form input:focus, .checkout-form select:focus {
+    outline: none;
+    border-color: #ffd700;
+    box-shadow: 0 0 12px rgba(212,175,55,0.6);
+}
+
+/* Buttons */
 .actions {
     text-align: center;
     margin-top: 30px;
+}
+.actions button {
+    padding: 12px 18px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    margin: 5px;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+/* Place Order button */
+.actions button:first-child {
+    background: linear-gradient(90deg, #d4af37, #b8860b);
+    color: #000;
+    font-size: 18px;
+    box-shadow: 0 0 20px rgba(212,175,55,0.5);
+}
+.actions button:first-child:hover {
+    background: linear-gradient(90deg, #ffd700, #d4af37);
+    transform: scale(1.08);
+    box-shadow: 0 0 30px rgba(212,175,55,0.7);
+}
+
+/* Clear Cart button */
+.actions button:nth-child(2) {
+    background: #b71c1c;
+    color: #fff;
+}
+.actions button:nth-child(2):hover {
+    background: #ff4c4c;
+    transform: scale(1.05);
+}
+
+/* Continue Shopping button */
+.actions a button {
+    background: #444;
+    color: #ddd;
+}
+.actions a button:hover {
+    background: #666;
+    color: #fff;
+    transform: scale(1.05);
 }
 </style>
 </head>
@@ -84,10 +156,23 @@ button:hover {
 <div class="cart-items" id="cartItems"></div>
 <div class="total" id="cartTotal"></div>
 
+<div class="checkout-form">
+  <label for="customerName">Customer Name</label>
+  <input type="text" id="customerName" placeholder="Enter your name">
+
+  <label for="deliveryMethod">Delivery Method</label>
+  <select id="deliveryMethod">
+    <option value="">Select delivery option</option>
+    <option value="Pickup">Pickup</option>
+    <option value="Home Delivery">Home Delivery</option>
+    <option value="Courier">Courier</option>
+  </select>
+</div>
+
 <div class="actions">
-  <button onclick="sendOrderToWhatsApp()">Send Order via WhatsApp</button>
-  <button onclick="clearCart()">Clear Cart</button>
-  <a href="index.html"><button>Continue Shopping</button></a>
+  <button onclick="finalizeOrder()">✅ Place Order</button>
+  <button onclick="clearCart()">🗑 Clear Cart</button>
+  <a href="index.html"><button>⬅ Continue Shopping</button></a>
 </div>
 
 <script>
@@ -116,12 +201,38 @@ function renderCart(){
     document.getElementById("cartTotal").innerText = "Total: ₦" + total;
 }
 
+function finalizeOrder(){
+    const name = document.getElementById("customerName").value.trim();
+    const delivery = document.getElementById("deliveryMethod").value;
+
+    if(!name || !delivery){
+        alert("Please enter your name and select a delivery method.");
+        return;
+    }
+
+    localStorage.setItem("customerName", name);
+    localStorage.setItem("deliveryMethod", delivery);
+
+    const orders = JSON.parse(localStorage.getItem("orders") || "[]");
+    const newOrder = {
+        date: new Date().toLocaleString(),
+        customer: name,
+        shipment: delivery,
+        items: cart
+    };
+    orders.push(newOrder);
+    localStorage.setItem("orders", JSON.stringify(orders));
+
+    sendOrderToWhatsApp();
+    clearCart();
+}
+
 function sendOrderToWhatsApp(){
     let message = "🛍️ *Marienne Exquisite Stitches*\n";
     message += "━━━━━━━━━━━━━━━━━━\n";
     message += `📅 Date: ${new Date().toLocaleDateString()}\n`;
-    message += `👤 Customer: ${localStorage.getItem("customerName") || "N/A"}\n`;
-    message += `🚚 Delivery: ${localStorage.getItem("deliveryMethod") || "N/A"}\n\n`;
+    message += `👤 Customer: ${localStorage.getItem("customerName")}\n`;
+    message += `🚚 Delivery: ${localStorage.getItem("deliveryMethod")}\n\n`;
 
     message += "🧾 *Order Summary*\n";
     let total = 0;
@@ -134,7 +245,7 @@ function sendOrderToWhatsApp(){
         }
     });
 
-    message += "\n━━━━━━━━━━━━━━━━━━\n";
+        message += "\n━━━━━━━━━━━━━━━━━━\n";
     message += `💰 *Total:* ₦${total}\n`;
     message += "━━━━━━━━━━━━━━━━━━\n\n";
     message += "✨ Thank you for shopping with us!\nWe’ll confirm your order shortly.";
@@ -155,3 +266,4 @@ renderCart();
 
 </body>
 </html>
+
